# lowpoly_vhs_horror

./: .gitignore  CMakeLists.txt  README.md
assets/: lamp.glb
assets/boombox/: boombox.glb  license.txt  scene.gltf
assets/car/: car.glb  license.txt  scene.gltf
assets/cashier/: size.fbx  test1.glb
assets/dialogues/: case_1.json  case_2.json  case_3.json  case_4.json
assets/gas_station/: Untitled.blend  bushes.glb  bushes0.glb  bushes1.glb  bushes2.glb  bushes3.glb  bushes4.glb  camera_1.glb  camera_2.glb  ceiling.glb  coffee.glb  desk.glb  floor.glb  glass.glb  icecream.glb  lamps.glb  refrigerator.glb  station.glb  station_case_5.glb  table.glb  table1.glb  tv.glb
assets/gas_station/shaders/: lighting.fs  lighting.vs
assets/levels/: emitters.txt  room01.txt  room01_collision.txt
assets/man/: license.txt  man.glb  scene.gltf
assets/monster/: monster.glb  monster_2.glb
assets/music/: audio_manifest.txt
assets/shaders/: lighting.fs  lighting.txt  rlights.h
assets/sky/: sky.glb
project/include/: app.hpp  audio.hpp  dialogue_manager.hpp  game.hpp  level_types.hpp  scene.hpp
project/src/: app.cpp  audio.cpp  dialogue_manager.cpp  game.cpp  scene.cpp  scene_load.cpp
src/: app.cpp  app.hpp  audio.cpp  audio.hpp  dialogue_manager.cpp  dialogue_manager.hpp  download_textures.cpp  game.cpp  game.hpp  level_types.hpp  main.cpp  player.cpp  player.hpp  scene.cpp  scene.hpp
